--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
         <li>Local Researcher (September 2019–December 2019, February 2020– June 2020)
             <p>Expanded National Nutrition Survey<br/>
             Department of Science and Technology - Food and Nutrition Research Institute<br/> 
-            Department of Science and Technology - Food and Nutrition Research Institute 
             Conducts face to face interview among respondents with different age groups regarding health and nutrition such as: smoking, alcohol consumption, non-communicable diseases, maternal health nutrition, and more; conducts twenty-four (24) hour food recall among mothers with children 0-36 months old; obtains anthropometric measurements among respondents of various age groups such as: height, weight, blood pressure, waist and hip circumference, and mid upper arm circumference (MUAC).</p></li>
         <li>Nutrition Advocate (February 2019-May 2019)
             <p>Team OnGround Inc.<br/>
@@ -53,8 +52,8 @@
                 Issued May 2024</p>
         </li>
     </ul>
-    <a href="https://www.linkedin.com/in/kimme-roxette-arapoc-19602417b/">Linkedin</a>
-    <a href="https://github.com/kraa17/html-portfolio">GitHub</a>
+    <a href="https://www.linkedin.com/in/kimme-roxette-arapoc-19602417b/" target="_blank">Linkedin</a>
+    <a href="https://github.com/kraa17/html-portfolio" target="_blank">GitHub</a>
     <footer>
         <p>© 2024 Kimme</p>
       </footer>
